ARM: -Werror=switch build failure

XMLWordPrintable

    • b14
    • arm

      building ARM32 after -Werrror=switch was enabled produces:

      /home/bellsoft/jdk/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp: In member function ‘virtual void LIRGenerator::do_ArithmeticOp(ArithmeticOp*)’:
      /home/bellsoft/jdk/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:868:10: error: enumeration value ‘objectTag’ not handled in switch [-Werror=switch]
         switch (tag) {
                ^
      /home/bellsoft/jdk/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:868:10: error: enumeration value ‘addressTag’ not handled in switch [-Werror=switch]
      /home/bellsoft/jdk/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:868:10: error: enumeration value ‘metaDataTag’ not handled in switch [-Werror=switch]
      /home/bellsoft/jdk/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:868:10: error: enumeration value ‘number_of_legal_tags’ not handled in switch [-Werror=switch]
      /home/bellsoft/jdk/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:868:10: error: enumeration value ‘voidTag’ not handled in switch [-Werror=switch]
      /home/bellsoft/jdk/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:868:10: error: enumeration value ‘illegalTag’ not handled in switch [-Werror=switch]
      /home/bellsoft/jdk/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:868:10: error: enumeration value ‘number_of_tags’ not handled in switch [-Werror=switch]
      cc1plus: all warnings being treated as errors
      lib/CompileJvm.gmk:178: recipe for target '/home/bellsoft/jdk/build/linux-arm-serverANDclientANDminimal-fastdebug/hotspot/variant-minimal/libjvm/objs/c1_LIRGenerator_arm.o' failed
      make[3]: *** [/home/bellsoft/jdk/build/linux-arm-serverANDclientANDminimal-fastdebug/hotspot/variant-minimal/libjvm/objs/c1_LIRGenerator_arm.o] Error 1
      make[3]: *** Waiting for unfinished jobs....

            Assignee:
            Aleksei Voitylov
            Reporter:
            Aleksei Voitylov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: