8211212: ARM: -Werror=switch build failure

Reviewed-by: shade